@@ -1,3 +1,7 @@
+2007-05-23  John W. Eaton  <jwe@octave.org>
+
+	* oct-sparse.h: Don't surround included files with extern "C" { ... }.
+
 2007-05-16  David Bateman  <dbateman@free.fr>
 
 	* dRowVector.cc (linspace): Return second argument if fewer than
